test/syntaxerrors/TestWhileLoopNoBraces.jdc
while (true) println("Hello world!");